# card-framework

./: .gitignore  AGENTS.md  BENCHMARK_REPORT.MD  EEE_196_CARD_UCL.md  FLOW.MD  LICENSE.md  README.md  TURNOVER.md  audio.json  audio.srt  audio.txt  audio_summary.json  audio_summary.json.agent_buffer  audio_summary.json.report.json  calibrate.py  compare_qwen_rag_mmr.py  debug_merge.py  debug_output.txt  deepseek_debug_msgs.json  embeddings.py  eval.py  events.py  llm_provider.py  logger_utils.py  main.py  orchestrator.py  package-lock.json  pipeline_plan.py  prompt_manager.py  pyproject.toml  setup_and_run.py  summary.xml.old  summary_output.py  summary_xml.py  transcript.json  transcript.json.old  turnover1.md  ui.py
.agents/rules/: commands.md
.github/workflows/: publish-pypi.yml
CARD-SpeakerAudioExtraction/: README.md
CARD-SpeakerAudioExtraction/configs/: README.md  config.yaml
CARD-SpeakerAudioExtraction/data/: README.md
CARD-SpeakerAudioExtraction/models/: README.md
CARD-SpeakerAudioExtraction/notebooks/: README.md
CARD-SpeakerAudioExtraction/scripts/: README.md  fix_dependencies.sh  test_targeted_separation.py
CARD-SpeakerAudioExtraction/src/: README.md
agentic_coder_prompts/skills/: code_structure_and_architecture.md  codebase.md  prompt_engineering.md  python_design_patterns.md  python_docstrings.md  python_logging.md  python_typehinting.md  uv_package_manager.md
agents/: base.py  client.py  corrector.py  critic.py  dtos.py  ground_truth_creator.py  health.py  loop_context.py  message_registry.py  parsers.py  qa_evaluator.py  retrieval.py  summarizer.py  summarizer_loop_controller.py  summarizer_tool_dispatcher.py  tool_call_utils.py  tool_handlers.py  utils.py
audio2script_and_summarizer/: README.md  __init__.py  __main__.py  audio_io.py  audio_splitter.py  calibrate_wpm.py  constraints.txt  diarize.py  emotion_pacing_presets.json  generate_emotion_calibration_presets.py  helpers.py  logging_utils.py  pipeline_config.py  requirements.txt  run_pipeline.py  run_pipeline.pyi  run_pipeline_deepseek.py  speaker_validation.py  stage3_voice.py  summarizer.py  summarizer_deepseek.py  summarizer_deepseek.pyi  transcript_wpm.py  tts_pacing_calibration.py  wpm_calibration.py  wpm_calibration_cache.py
audio2script_and_summarizer/deepseek/: __init__.py  chat_logs.py  client.py  constants.py  core.py  models.py  output_helpers.py  parsing.py  prompting.py  runtime_helpers.py  stream_events.py  tooling.py
audio2script_and_summarizer/diarization/: __init__.py  pyannote.py
audio2script_and_summarizer/diarize_split_summarize_tests/: defense_audio.json  (+3 more)
audio_pipeline/: __init__.py  alignment.py  calibration.py  contracts.py  errors.py  eta.py  factory.py  gpu_heartbeat.py  interjector.py  io.py  live_draft_voice_clone.py  orchestrator.py  runtime.py  speaker_samples.py  voice_clone_contracts.py  voice_clone_orchestrator.py  word_speaker_alignment.py
benchmark/: README.md  artifacts.py  datasets.py  diarization.py  diarization_datasets.py  diarization_types.py  instrumentation.py  matrix.py  metrics.py  mrcr.py  provider_profiles.yaml  qa.py  qa_config.yaml  qa_contracts.py  qa_evaluator_runner.py  qa_input_guard.py  qa_settings.py  run.py  somebody.py  test_ui.py  types.py
benchmarks/: README.md  __init__.py  benchmark_indextts2_voice_clone.py  setup_voice_clone_benchmark.py  setup_voice_clone_holdout_wizard.py
coder_docs/: academic_standards.md  codebase_guide.md  fault_localization_workflow.md  git_github_workflow.md  github_actions_release_spec.md  ruff.md  scrapling.md  uv_package_manager.md
conf/: config.yaml
llm/: MEMORY.MD
orchestration/: __init__.py  stage_orchestrator.py
prompts/: corrector_system.jinja2  critic_system.jinja2  interjector_system.jinja2  interjector_user.jinja2  qa_evaluator_system.jinja2  qa_evaluator_user.jinja2  qa_ground_truth_system.jinja2  qa_ground_truth_user.jinja2  summarizer_revise.jinja2  summarizer_system.jinja2  summarizer_user.jinja2
providers/: __init__.py  deepseek_provider.py  glm_provider.py  google_genai_provider.py  huggingface_provider.py  logging_provider.py  nanbeige_provider.py  null_provider.py  response_callbacks.py  sentence_transformer_provider.py  transformers_provider.py  vllm_provider.py
scripts/: quality_gate.py  run_summary_matrix.py
tests/: __init__.py  conftest.py  test_audio_io.py  test_audio_splitter.py  test_benchmark_indextts2_voice_clone.py  test_calibrate_wpm_cli.py  test_card_voice_integration.py  test_deepseek_runtime_helpers.py  test_diarization.json  test_logger_utils.py  test_logging_utils.py  test_loop_context_memory.py  test_main_pipeline_warnings.py  test_main_speaker_sample_source.py  test_main_summary_persistence.py  test_orchestrator_stage_modes.py  test_pipeline_config.py  test_pipeline_plan.py  test_pipeline_stage175_cache.py  test_pipeline_stage1_ui_flags.py  test_podcast_input.json  test_run_pipeline_dashboard_refresh.py  test_run_pipeline_dashboard_theme.py  test_run_pipeline_deepseek_stream.py  test_run_pipeline_deepseek_wrapper.py  test_run_pipeline_duration_control.py  test_run_pipeline_skip_a2s.py  test_speaker_validation.py  test_stage3_interjection_logic.py  test_stage3_pipeline_integration.py  test_stage3_summary_discovery.py  test_summarizer_budgeting.py  test_summarizer_deepseek_resilience.py  test_summarizer_deepseek_tool_loop.py  test_summarizer_prompt_context.py  test_transcript_wpm.py  test_tts_pacing_calibration.py  test_ui_tool_call_filter.py  test_wpm_calibration.py  test_wpm_calibration_cache.py
tmp/: live_api_summary.json  live_api_summary.json.agent_buffer  live_api_summary.report.json  live_api_summary_reasoner.json.agent_buffer  live_api_summary_reasoner.report.json
voice-cloner-and-interjector/: .gitignore  README.md  checkpoint_manager.py  paper.txt  pyproject.toml  train_duration.py  training_ui.py  trigger.html  verify_duration.py
(+318 files in other folders)
