[project]
name = "llm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "requests",
    "a2a-sdk[all]",
    "httpx",
    "uvicorn",
    "starlette",
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0",
    "numpy",
    "accelerate>=1.12.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "rich>=14.3.3",
    "google-genai>=1.64.0",
    "zai-sdk>=0.2.2",
    "jinja2",
    "datasets>=4.5.0",
    "hf-transfer>=0.1.9",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
