[project]
name = "llm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "requests",
    "a2a-sdk[all]",
    "httpx",
    "uvicorn",
    "starlette",
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0",
    "numpy",
    "accelerate>=1.12.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "rich>=14.3.3",
    "google-genai>=1.64.0",
    "zai-sdk>=0.2.2",
    "jinja2",
    "datasets>=4.5.0",
    "hf-transfer>=0.1.9",
    "pydantic>=2.12.5",
    "demucs>=4.0.1",
    "faster-whisper>=1.1.1",
    "nemo-toolkit[asr]>=2.4.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.13.1",
    "torchcodec>=0.10.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
xfail_strict = true
junit_family = "xunit2"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--durations=10",
    "--durations-min=1.0",
]
markers = [
    "unit: deterministic fast unit tests",
    "integration: component integration tests using local dependencies",
    "contract: shared interface/adapter behavior tests",
    "slow: intentionally slow tests",
    "gpu: tests that require GPU acceleration",
    "network: tests that require external network access",
]
